<resources>
    <string name="app_name">360VUZ</string>

    <!-- login -->
    <string name="login_title">Login</string>
    <string name="login">Github Login</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login_image">login image</string>
    <string name="login_error_empty">Enter your login</string>
    <string name="login_error_need_only_alphanumeric">Only alphanumeric chars allowed</string>
    <string name="password_error_empty">Enter your password</string>
    <string name="password_error_min_length">Password must be at least 8 characters</string>
    <string name="password_error_need_characters">Need at least 1 char on lower case, 1 on upper case, 1 number, 1 special char</string>
    <string name="ok">OK</string>
    <string name="internet_connection_error">Check your internet connection</string>

    <!-- home -->
    <string name="user_info_login">Login:</string>
    <string name="user_info_id">ID:</string>
    <string name="user_info_type">Type:</string>
    <string name="user_info_public_repos">Public Repos:</string>
    <string name="logout">Logout</string>
    <string name="user_info_title">User\'s Info</string>
    <string name="image_profile">Profile image</string>

</resources>
